@@ -60,82 +60,145 @@ public class KhachHangService {
         return khachHangRepository.save(newKH);
     }
 
-    // 🧠 READ - LẤY DANH SÁCH CÓ PHÂN TRANG & SẮP XẾP
-    public PageResponseDTO<KhachHangResponseDTO> getAllCustomers(
+    // ----------------------------------------------------------------------
+    // --- PHƯƠNG THỨC 1: CHỈ HIỂN THỊ DANH SÁCH & SẮP XẾP ---
+    // ----------------------------------------------------------------------
+    /**
+     * Lấy danh sách khách hàng có phân trang và sắp xếp.
+     * Mặc định sắp xếp theo NgayTao giảm dần.
+     */
+    public PageResponseDTO<KhachHangResponseDTO> getAllKhachHang(
             int page, int size, String sortBy, String sortDirection) {
+        
+        // Cập nhật: Mặc định sắp xếp theo ngayTao (giảm dần)
+        Sort sort = SortUtils.createSort(
+            sortBy, 
+            sortDirection, 
+            "maKhachHang", // Giữ nguyên "maKhachHang" ở đây nếu "ngayTao" không phải là trường của KhachHang.
+                           // LƯU Ý: Khách hàng không có NgayTao trong Model, nên tôi giữ lại maKhachHang.
+                           // Nếu bạn thêm NgayTao vào Model KhachHang, hãy đổi nó thành "ngayTao".
+            Sort.Direction.DESC 
+        );
 
-        // Giới hạn 10 khách/trang
-        size = Math.min(size, 10);
         page = Math.max(0, page);
-
-        String safeSortBy = mapSortableField(sortBy);
-        Sort sort = SortUtils.createSort(safeSortBy, sortDirection, "maKhachHang", Sort.Direction.DESC);
-
+        size = Math.min(size, 100); 
+        size = Math.max(1, size);
+        
         Pageable pageable = PageRequest.of(page, size, sort);
-        Page<KhachHang> resultPage = khachHangRepository.findAll(pageable);
 
-        return new PageResponseDTO<>(resultPage.map(KhachHangResponseDTO::new));
+        Page<KhachHang> khachHangPage = khachHangRepository.findAll(pageable);
+
+        return new PageResponseDTO<>(khachHangPage.map(KhachHangResponseDTO::new));
     }
 
-    // 🧠 SEARCH - TÌM KIẾM + PHÂN TRANG + SẮP XẾP
-    public PageResponseDTO<KhachHangResponseDTO> searchCustomers(
+    // ----------------------------------------------------------------------
+    // --- PHƯƠNG THỨC 2: TÌM KIẾM, LỌC & PHÂN TRANG (Tách biệt) ---
+    // ----------------------------------------------------------------------
+    /**
+     * Tìm kiếm khách hàng theo Tên, SĐT, Email, Trạng thái và Loại khách.
+     */
+    public PageResponseDTO<KhachHangResponseDTO> searchKhachHang(
             int page, int size, String sortBy, String sortDirection,
-            String tenKhachHang, String soDienThoai, String loaiKhach) {
+            String tenKhachHang, String soDienThoai, String email, 
+            String trangThai, String loaiKhach) { 
+        
+        // 1. Xây dựng Specification
+        Specification<KhachHang> spec = Specification.where(null); 
+        
+        // Tìm kiếm theo Tên Khách Hàng (LIKE)
+        spec = spec.and(JpaSpecificationUtil.attributeContains("tenKhachHang", tenKhachHang));
+        
+        // Tìm kiếm theo Số Điện Thoại (LIKE)
+        spec = spec.and(JpaSpecificationUtil.attributeContains("soDienThoai", soDienThoai));
+        
+        // Tìm kiếm theo Email (LIKE)
+        spec = spec.and(JpaSpecificationUtil.attributeContains("email", email));
+        
+        // Lọc theo Trạng thái (chính xác)
+        spec = spec.and(JpaSpecificationUtil.attributeEquals("trangThai", trangThai));
+        
+        // Lọc theo Loại Khách (chính xác)
+        spec = spec.and(JpaSpecificationUtil.attributeEquals("loaiKhach", loaiKhach));
 
-        Specification<KhachHang> spec = Specification.<KhachHang>where(null)
-                .and(JpaSpecificationUtil.attributeContains("tenKhachHang", tenKhachHang))
-                .and(JpaSpecificationUtil.attributeContains("soDienThoai", soDienThoai))
-                .and(JpaSpecificationUtil.attributeEquals("loaiKhach", loaiKhach));
-
-        // Giới hạn 10 khách/trang
-        size = Math.min(size, 10);
+        // 2. Xây dựng Pageable
+        // Mặc định sắp xếp theo maKhachHang (Giảm dần)
+        Sort sort = SortUtils.createSort(sortBy, sortDirection, "maKhachHang", Sort.Direction.DESC);
         page = Math.max(0, page);
-
-        String safeSortBy = mapSortableField(sortBy);
-        Sort sort = SortUtils.createSort(safeSortBy, sortDirection, "maKhachHang", Sort.Direction.DESC);
-
+        size = Math.min(size, 100); 
+        size = Math.max(1, size);
+        
         Pageable pageable = PageRequest.of(page, size, sort);
-        Page<KhachHang> pageResult = khachHangRepository.findAll(spec, pageable);
 
-        return new PageResponseDTO<>(pageResult.map(KhachHangResponseDTO::new));
+        // 3. Gọi Repository để tìm kiếm (sử dụng Specification và Pageable)
+        Page<KhachHang> khachHangPage = khachHangRepository.findAll(spec, pageable);
+
+        // 4. Chuyển đổi sang DTO và trả về
+        return new PageResponseDTO<>(khachHangPage.map(KhachHangResponseDTO::new));
     }
 
     // 🧠 UPDATE
+    /**
+     * Cập nhật thông tin khách hàng, chỉ ghi đè các trường được gửi (Partial Update).
+     * @param maKhachHang Mã khách hàng cần sửa.
+     * @param updateDTO Dữ liệu cập nhật.
+     * @return KhachHang đã được cập nhật.
+     */
     @Transactional
-    public KhachHang updateCustomer(Integer id, KhachHangUpdateDTO dto) {
-        KhachHang existing = khachHangRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy khách hàng với mã: " + id));
+    public KhachHang updateKhachHang(Integer maKhachHang, KhachHangUpdateDTO updateDTO) {
+        
+        // 1. Tìm Khách hàng hiện tại
+        KhachHang existingKH = khachHangRepository.findById(maKhachHang)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy Khách Hàng với Mã: " + maKhachHang));
 
-        Optional.ofNullable(dto.getTenKhachHang()).filter(t -> !t.isBlank()).ifPresent(existing::setTenKhachHang);
-
-        Optional.ofNullable(dto.getSoDienThoai()).filter(s -> !s.isBlank()).ifPresent(sdt -> {
-            khachHangRepository.findBySoDienThoai(sdt).ifPresent(kh -> {
-                if (!kh.getMaKhachHang().equals(id))
-                    throw new ResourceAlreadyExistsException("Số điện thoại đã tồn tại: " + sdt);
+        // --- 2. Cập nhật Số Điện Thoại (Kiểm tra trùng) ---
+        String newSdt = updateDTO.getSoDienThoai();
+        if (newSdt != null && !newSdt.trim().isEmpty()) {
+            khachHangRepository.findBySoDienThoai(newSdt).ifPresent(kh -> {
+                if (!kh.getMaKhachHang().equals(maKhachHang)) {
+                    throw new ResourceAlreadyExistsException("Số điện thoại đã được sử dụng bởi khách hàng khác: " + newSdt);
+                }
             });
-            existing.setSoDienThoai(sdt);
-        });
-
-        Optional.ofNullable(dto.getEmail()).filter(e -> !e.isBlank()).ifPresent(email -> {
-            khachHangRepository.findByEmail(email).ifPresent(kh -> {
-                if (!kh.getMaKhachHang().equals(id))
-                    throw new ResourceAlreadyExistsException("Email đã tồn tại: " + email);
-            });
-            existing.setEmail(email);
-        });
-
-        Optional.ofNullable(dto.getDiaChi()).filter(d -> !d.isBlank()).ifPresent(existing::setDiaChi);
-        Optional.ofNullable(dto.getLoaiKhach()).filter(l -> !l.isBlank()).ifPresent(existing::setLoaiKhach);
-        Optional.ofNullable(dto.getGhiChu()).ifPresent(existing::setGhiChu);
-
-        if (dto.getTrangThai() != null && !dto.getTrangThai().isBlank()) {
-            if (!Arrays.asList(VALID_TRANG_THAI).contains(dto.getTrangThai())) {
-                throw new IllegalArgumentException("Trạng thái không hợp lệ. Chỉ chấp nhận: " + String.join(", ", VALID_TRANG_THAI));
-            }
-            existing.setTrangThai(dto.getTrangThai());
+            existingKH.setSoDienThoai(newSdt);
         }
 
-        return khachHangRepository.save(existing);
+        // --- 3. Cập nhật Email (Kiểm tra trùng) ---
+        String newEmail = updateDTO.getEmail();
+        if (newEmail != null && !newEmail.trim().isEmpty()) {
+            khachHangRepository.findByEmail(newEmail).ifPresent(kh -> {
+                if (!kh.getMaKhachHang().equals(maKhachHang)) {
+                    throw new ResourceAlreadyExistsException("Email đã được sử dụng bởi khách hàng khác: " + newEmail);
+                }
+            });
+            existingKH.setEmail(newEmail);
+        }
+        
+        // --- 4. Cập nhật các trường còn lại (Sử dụng Optional để kiểm tra null) ---
+        // Tên Khách Hàng
+        Optional.ofNullable(updateDTO.getTenKhachHang())
+                .filter(s -> !s.trim().isEmpty())
+                .ifPresent(existingKH::setTenKhachHang);
+        
+        // Địa Chỉ
+        Optional.ofNullable(updateDTO.getDiaChi())
+                .filter(s -> !s.trim().isEmpty())
+                .ifPresent(existingKH::setDiaChi);
+
+        // Loại Khách
+        Optional.ofNullable(updateDTO.getLoaiKhach())
+                .filter(s -> !s.trim().isEmpty())
+                .ifPresent(existingKH::setLoaiKhach);
+
+        // Ghi Chú
+        // Ghi chú có thể là chuỗi rỗng để xóa nội dung
+        Optional.ofNullable(updateDTO.getGhiChu()).ifPresent(existingKH::setGhiChu);
+
+        // Trạng Thái
+        Optional.ofNullable(updateDTO.getTrangThai())
+                .filter(s -> !s.trim().isEmpty())
+                .ifPresent(existingKH::setTrangThai);
+        
+        // 5. Lưu và trả về
+        return khachHangRepository.save(existingKH);
     }
 
     // 🧠 SOFT DELETE
